// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table with empty column header adjacent tables 1`] = `
{
  "blocks": [
    {
      "attributes": {
        "columns": [
          {
            "columnName": "name__1",
            "name": "name",
            "slice": "M00000000",
            "textAlignment": "start",
          },
          {
            "columnName": "age__2",
            "name": "age",
            "slice": "M00000001",
            "textAlignment": "end",
          },
          {
            "columnName": "job__3",
            "name": "job",
            "slice": "M00000002",
          },
          {
            "columnName": "column_4__4",
            "name": "",
            "slice": "M00000003",
            "textAlignment": "center",
          },
        ],
        "dataSet": "B00000001",
        "showColumnHeaders": true,
      },
      "id": "B00000000",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {
        "records": [
          {
            "age__2": {
              "jsonValue": "20",
              "slice": "M00000005",
            },
            "column_4__4": {
              "jsonValue": "ちょっと変な but earnest person. He really really likes monsters",
              "slice": "M00000007",
            },
            "job__3": {
              "jsonValue": "fighter",
              "slice": "M00000006",
            },
            "name__1": {
              "jsonValue": "laios",
              "slice": "M00000004",
            },
          },
          {
            "age__2": {
              "jsonValue": "500",
              "slice": "M0000000b",
            },
            "column_4__4": {
              "jsonValue": "Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...",
              "slice": "M0000000d",
            },
            "job__3": {
              "jsonValue": "mage",
              "slice": "M0000000c",
            },
            "name__1": {
              "jsonValue": "marcille",
              "slice": "M0000000a",
            },
          },
          {
            "age__2": {
              "jsonValue": "18",
              "slice": "M0000000f",
            },
            "column_4__4": {
              "jsonValue": "She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers",
              "slice": "M00000011",
            },
            "job__3": {
              "jsonValue": "healer",
              "slice": "M00000010",
            },
            "name__1": {
              "jsonValue": "falin",
              "slice": "M0000000e",
            },
          },
          {
            "age__2": {
              "jsonValue": "29",
              "slice": "M00000014",
            },
            "column_4__4": {
              "jsonValue": "Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
              "slice": "M00000016",
            },
            "job__3": {
              "jsonValue": "thief",
              "slice": "M00000015",
            },
            "name__1": {
              "jsonValue": "chilchuk",
              "slice": "M00000013",
            },
          },
        ],
        "schema": {
          "age__2": "rich_text",
          "column_4__4": "rich_text",
          "job__3": "rich_text",
          "name__1": "rich_text",
        },
      },
      "id": "B00000001",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "data-set",
    },
    {
      "attributes": {},
      "id": "B00000002",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000003",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000004",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000005",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000006",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000007",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000008",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000009",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000c",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000d",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000e",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000f",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000010",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000011",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000012",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000013",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000014",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000015",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {
        "columns": [
          {
            "columnName": "name__1",
            "name": "name",
            "slice": "M00000017",
            "textAlignment": "start",
          },
          {
            "columnName": "age__2",
            "name": "age",
            "slice": "M00000018",
            "textAlignment": "end",
          },
          {
            "columnName": "job__3",
            "name": "job",
            "slice": "M00000019",
          },
          {
            "columnName": "column_4__4",
            "name": "",
            "slice": "M0000001a",
            "textAlignment": "center",
          },
        ],
        "dataSet": "B00000017",
        "showColumnHeaders": true,
      },
      "id": "B00000016",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {
        "records": [
          {
            "age__2": {
              "jsonValue": "20",
              "slice": "M0000001c",
            },
            "column_4__4": {
              "jsonValue": "ちょっと変な but earnest person. He really really likes monsters",
              "slice": "M0000001e",
            },
            "job__3": {
              "jsonValue": "fighter",
              "slice": "M0000001d",
            },
            "name__1": {
              "jsonValue": "laios",
              "slice": "M0000001b",
            },
          },
          {
            "age__2": {
              "jsonValue": "500",
              "slice": "M00000022",
            },
            "column_4__4": {
              "jsonValue": "Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...",
              "slice": "M00000024",
            },
            "job__3": {
              "jsonValue": "mage",
              "slice": "M00000023",
            },
            "name__1": {
              "jsonValue": "marcille",
              "slice": "M00000021",
            },
          },
          {
            "age__2": {
              "jsonValue": "18",
              "slice": "M00000026",
            },
            "column_4__4": {
              "jsonValue": "She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers",
              "slice": "M00000028",
            },
            "job__3": {
              "jsonValue": "healer",
              "slice": "M00000027",
            },
            "name__1": {
              "jsonValue": "falin",
              "slice": "M00000025",
            },
          },
          {
            "age__2": {
              "jsonValue": "29",
              "slice": "M0000002b",
            },
            "column_4__4": {
              "jsonValue": "Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
              "slice": "M0000002d",
            },
            "job__3": {
              "jsonValue": "thief",
              "slice": "M0000002c",
            },
            "name__1": {
              "jsonValue": "chilchuk",
              "slice": "M0000002a",
            },
          },
        ],
        "schema": {
          "age__2": "rich_text",
          "column_4__4": "rich_text",
          "job__3": "rich_text",
          "name__1": "rich_text",
        },
      },
      "id": "B00000017",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "data-set",
    },
    {
      "attributes": {},
      "id": "B00000018",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000019",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001c",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001d",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001e",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001f",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000020",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000021",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000022",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000023",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000024",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000025",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000026",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000027",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000028",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000029",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000002a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000002b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
  ],
  "marks": [
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000000",
      "range": "(2..7]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000001",
      "range": "(7..11]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000002",
      "range": "(11..15]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000003",
      "range": "(15..16]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000004",
      "range": "(17..22]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000005",
      "range": "(22..25]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000006",
      "range": "(25..33]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000007",
      "range": "(33..92]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M00000008",
      "range": "(64..77]",
      "type": "italic",
    },
    {
      "attributes": {},
      "id": "M00000009",
      "range": "(71..77]",
      "type": "bold",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000a",
      "range": "(93..101]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000b",
      "range": "(101..105]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000c",
      "range": "(105..110]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000d",
      "range": "(110..232]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000e",
      "range": "(233..238]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000f",
      "range": "(238..241]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000010",
      "range": "(241..248]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000011",
      "range": "(248..391]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M00000012",
      "range": "(253..258]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000013",
      "range": "(392..400]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000014",
      "range": "(400..403]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000015",
      "range": "(403..409]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000016",
      "range": "(409..551]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000017",
      "range": "(553..558]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000018",
      "range": "(558..562]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000019",
      "range": "(562..566]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001a",
      "range": "(566..567]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001b",
      "range": "(568..573]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001c",
      "range": "(573..576]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001d",
      "range": "(576..584]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001e",
      "range": "(584..643]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M0000001f",
      "range": "(615..628]",
      "type": "italic",
    },
    {
      "attributes": {},
      "id": "M00000020",
      "range": "(622..628]",
      "type": "bold",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000021",
      "range": "(644..652]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000022",
      "range": "(652..656]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000023",
      "range": "(656..661]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000024",
      "range": "(661..783]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000025",
      "range": "(784..789]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000026",
      "range": "(789..792]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000027",
      "range": "(792..799]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000028",
      "range": "(799..942]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M00000029",
      "range": "(804..809]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002a",
      "range": "(943..951]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002b",
      "range": "(951..954]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002c",
      "range": "(954..960]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002d",
      "range": "(960..1102]",
      "type": "slice",
    },
  ],
  "text": "￼￼￼name￼age￼job￼￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people￼￼￼name￼age￼job￼￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
}
`;

exports[`table with empty column header converting 1`] = `
{
  "blocks": [
    {
      "attributes": {
        "columns": [
          {
            "columnName": "name__1",
            "name": "name",
            "slice": "M00000000",
            "textAlignment": "start",
          },
          {
            "columnName": "age__2",
            "name": "age",
            "slice": "M00000001",
            "textAlignment": "end",
          },
          {
            "columnName": "job__3",
            "name": "job",
            "slice": "M00000002",
          },
          {
            "columnName": "column_4__4",
            "name": "",
            "slice": "M00000003",
            "textAlignment": "center",
          },
        ],
        "dataSet": "B00000001",
        "showColumnHeaders": true,
      },
      "id": "B00000000",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {
        "records": [
          {
            "age__2": {
              "jsonValue": "20",
              "slice": "M00000005",
            },
            "column_4__4": {
              "jsonValue": "ちょっと変な but earnest person. He really really likes monsters",
              "slice": "M00000007",
            },
            "job__3": {
              "jsonValue": "fighter",
              "slice": "M00000006",
            },
            "name__1": {
              "jsonValue": "laios",
              "slice": "M00000004",
            },
          },
          {
            "age__2": {
              "jsonValue": "500",
              "slice": "M0000000b",
            },
            "column_4__4": {
              "jsonValue": "Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...",
              "slice": "M0000000d",
            },
            "job__3": {
              "jsonValue": "mage",
              "slice": "M0000000c",
            },
            "name__1": {
              "jsonValue": "marcille",
              "slice": "M0000000a",
            },
          },
          {
            "age__2": {
              "jsonValue": "18",
              "slice": "M0000000f",
            },
            "column_4__4": {
              "jsonValue": "She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers",
              "slice": "M00000011",
            },
            "job__3": {
              "jsonValue": "healer",
              "slice": "M00000010",
            },
            "name__1": {
              "jsonValue": "falin",
              "slice": "M0000000e",
            },
          },
          {
            "age__2": {
              "jsonValue": "29",
              "slice": "M00000014",
            },
            "column_4__4": {
              "jsonValue": "Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
              "slice": "M00000016",
            },
            "job__3": {
              "jsonValue": "thief",
              "slice": "M00000015",
            },
            "name__1": {
              "jsonValue": "chilchuk",
              "slice": "M00000013",
            },
          },
        ],
        "schema": {
          "age__2": "rich_text",
          "column_4__4": "rich_text",
          "job__3": "rich_text",
          "name__1": "rich_text",
        },
      },
      "id": "B00000001",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "data-set",
    },
    {
      "attributes": {},
      "id": "B00000002",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000003",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000004",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000005",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000006",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000007",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000008",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000009",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000c",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000d",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000e",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000f",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000010",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000011",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000012",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000013",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000014",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000015",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
  ],
  "marks": [
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000000",
      "range": "(2..7]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000001",
      "range": "(7..11]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000002",
      "range": "(11..15]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000003",
      "range": "(15..16]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000004",
      "range": "(17..22]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000005",
      "range": "(22..25]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000006",
      "range": "(25..33]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000007",
      "range": "(33..92]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M00000008",
      "range": "(64..77]",
      "type": "italic",
    },
    {
      "attributes": {},
      "id": "M00000009",
      "range": "(71..77]",
      "type": "bold",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000a",
      "range": "(93..101]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000b",
      "range": "(101..105]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000c",
      "range": "(105..110]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000d",
      "range": "(110..232]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000e",
      "range": "(233..238]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000f",
      "range": "(238..241]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000010",
      "range": "(241..248]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000011",
      "range": "(248..391]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M00000012",
      "range": "(253..258]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000013",
      "range": "(392..400]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000014",
      "range": "(400..403]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000015",
      "range": "(403..409]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000016",
      "range": "(409..551]",
      "type": "slice",
    },
  ],
  "text": "￼￼￼name￼age￼job￼￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
}
`;

exports[`table with empty column header parsing 1`] = `
{
  "blocks": [
    {
      "attributes": {},
      "id": "B00000000",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {},
      "id": "B00000001",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "thead",
    },
    {
      "attributes": {},
      "id": "B00000002",
      "parents": [
        "table",
        "thead",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000003",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B00000004",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {},
      "id": "B00000005",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B00000006",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {},
      "id": "B00000007",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "tbody",
    },
    {
      "attributes": {},
      "id": "B00000008",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000009",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B0000000a",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B0000000b",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B0000000c",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B0000000d",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B0000000e",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B0000000f",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000010",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B00000011",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000012",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000013",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B00000014",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000015",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B00000016",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000017",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000018",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B00000019",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B0000001a",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B0000001b",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
  ],
  "marks": [
    {
      "attributes": {},
      "id": "M00000000",
      "range": "(67..80]",
      "type": "em",
    },
    {
      "attributes": {},
      "id": "M00000001",
      "range": "(74..80]",
      "type": "strong",
    },
    {
      "attributes": {},
      "id": "M00000002",
      "range": "(258..263]",
      "type": "em",
    },
  ],
  "text": "￼￼￼￼name￼age￼job￼￼￼￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
}
`;

exports[`tables adjacent tables 1`] = `
{
  "blocks": [
    {
      "attributes": {
        "columns": [
          {
            "columnName": "name__1",
            "name": "name",
            "slice": "M00000000",
            "textAlignment": "start",
          },
          {
            "columnName": "age__2",
            "name": "age",
            "slice": "M00000001",
            "textAlignment": "end",
          },
          {
            "columnName": "job__3",
            "name": "job",
            "slice": "M00000002",
          },
          {
            "columnName": "notes__4",
            "name": "notes",
            "slice": "M00000003",
            "textAlignment": "center",
          },
        ],
        "dataSet": "B00000001",
        "showColumnHeaders": true,
      },
      "id": "B00000000",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {
        "records": [
          {
            "age__2": {
              "jsonValue": "20",
              "slice": "M00000007",
            },
            "job__3": {
              "jsonValue": "fighter",
              "slice": "M00000008",
            },
            "name__1": {
              "jsonValue": "laios",
              "slice": "M00000006",
            },
            "notes__4": {
              "jsonValue": "ちょっと変な but earnest person. He really really likes monsters",
              "slice": "M00000009",
            },
          },
          {
            "age__2": {
              "jsonValue": "500",
              "slice": "M0000000d",
            },
            "job__3": {
              "jsonValue": "mage",
              "slice": "M0000000e",
            },
            "name__1": {
              "jsonValue": "marcille",
              "slice": "M0000000c",
            },
            "notes__4": {
              "jsonValue": "Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...",
              "slice": "M0000000f",
            },
          },
          {
            "age__2": {
              "jsonValue": "18",
              "slice": "M00000011",
            },
            "job__3": {
              "jsonValue": "healer",
              "slice": "M00000012",
            },
            "name__1": {
              "jsonValue": "falin",
              "slice": "M00000010",
            },
            "notes__4": {
              "jsonValue": "She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers",
              "slice": "M00000013",
            },
          },
          {
            "age__2": {
              "jsonValue": "29",
              "slice": "M00000016",
            },
            "job__3": {
              "jsonValue": "thief",
              "slice": "M00000017",
            },
            "name__1": {
              "jsonValue": "chilchuk",
              "slice": "M00000015",
            },
            "notes__4": {
              "jsonValue": "Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
              "slice": "M00000018",
            },
          },
        ],
        "schema": {
          "age__2": "rich_text",
          "job__3": "rich_text",
          "name__1": "rich_text",
          "notes__4": "rich_text",
        },
      },
      "id": "B00000001",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "data-set",
    },
    {
      "attributes": {},
      "id": "B00000002",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000003",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000004",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000005",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000006",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000007",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000008",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000009",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000c",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000d",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000e",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000f",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000010",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000011",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000012",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000013",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000014",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000015",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {
        "columns": [
          {
            "columnName": "name__1",
            "name": "name",
            "slice": "M00000019",
            "textAlignment": "start",
          },
          {
            "columnName": "age__2",
            "name": "age",
            "slice": "M0000001a",
            "textAlignment": "end",
          },
          {
            "columnName": "job__3",
            "name": "job",
            "slice": "M0000001b",
          },
          {
            "columnName": "notes__4",
            "name": "notes",
            "slice": "M0000001c",
            "textAlignment": "center",
          },
        ],
        "dataSet": "B00000017",
        "showColumnHeaders": true,
      },
      "id": "B00000016",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {
        "records": [
          {
            "age__2": {
              "jsonValue": "20",
              "slice": "M00000020",
            },
            "job__3": {
              "jsonValue": "fighter",
              "slice": "M00000021",
            },
            "name__1": {
              "jsonValue": "laios",
              "slice": "M0000001f",
            },
            "notes__4": {
              "jsonValue": "ちょっと変な but earnest person. He really really likes monsters",
              "slice": "M00000022",
            },
          },
          {
            "age__2": {
              "jsonValue": "500",
              "slice": "M00000026",
            },
            "job__3": {
              "jsonValue": "mage",
              "slice": "M00000027",
            },
            "name__1": {
              "jsonValue": "marcille",
              "slice": "M00000025",
            },
            "notes__4": {
              "jsonValue": "Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...",
              "slice": "M00000028",
            },
          },
          {
            "age__2": {
              "jsonValue": "18",
              "slice": "M0000002a",
            },
            "job__3": {
              "jsonValue": "healer",
              "slice": "M0000002b",
            },
            "name__1": {
              "jsonValue": "falin",
              "slice": "M00000029",
            },
            "notes__4": {
              "jsonValue": "She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers",
              "slice": "M0000002c",
            },
          },
          {
            "age__2": {
              "jsonValue": "29",
              "slice": "M0000002f",
            },
            "job__3": {
              "jsonValue": "thief",
              "slice": "M00000030",
            },
            "name__1": {
              "jsonValue": "chilchuk",
              "slice": "M0000002e",
            },
            "notes__4": {
              "jsonValue": "Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
              "slice": "M00000031",
            },
          },
        ],
        "schema": {
          "age__2": "rich_text",
          "job__3": "rich_text",
          "name__1": "rich_text",
          "notes__4": "rich_text",
        },
      },
      "id": "B00000017",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "data-set",
    },
    {
      "attributes": {},
      "id": "B00000018",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000019",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001c",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001d",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001e",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001f",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000020",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000021",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000022",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000023",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000024",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000025",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000026",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000027",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000028",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000029",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000002a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000002b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
  ],
  "marks": [
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000000",
      "range": "(2..7]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000001",
      "range": "(7..11]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000002",
      "range": "(11..15]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000003",
      "range": "(15..21]",
      "type": "slice",
    },
    {
      "attributes": {
        "url": "https://ja.wikipedia.org/wiki/%E3%83%80%E3%83%B3%E3%82%B8%E3%83%A7%E3%83%B3%E9%A3%AF",
      },
      "id": "M00000004",
      "range": "(16..21)",
      "type": "link",
    },
    {
      "attributes": {},
      "id": "M00000005",
      "range": "(16..21]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000006",
      "range": "(22..27]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000007",
      "range": "(27..30]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000008",
      "range": "(30..38]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000009",
      "range": "(38..97]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M0000000a",
      "range": "(69..82]",
      "type": "italic",
    },
    {
      "attributes": {},
      "id": "M0000000b",
      "range": "(76..82]",
      "type": "bold",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000c",
      "range": "(98..106]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000d",
      "range": "(106..110]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000e",
      "range": "(110..115]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000f",
      "range": "(115..237]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000010",
      "range": "(238..243]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000011",
      "range": "(243..246]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000012",
      "range": "(246..253]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000013",
      "range": "(253..396]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M00000014",
      "range": "(258..263]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000015",
      "range": "(397..405]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000016",
      "range": "(405..408]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000017",
      "range": "(408..414]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000018",
      "range": "(414..556]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000019",
      "range": "(558..563]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001a",
      "range": "(563..567]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001b",
      "range": "(567..571]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001c",
      "range": "(571..577]",
      "type": "slice",
    },
    {
      "attributes": {
        "url": "https://ja.wikipedia.org/wiki/%E3%83%80%E3%83%B3%E3%82%B8%E3%83%A7%E3%83%B3%E9%A3%AF",
      },
      "id": "M0000001d",
      "range": "(572..577)",
      "type": "link",
    },
    {
      "attributes": {},
      "id": "M0000001e",
      "range": "(572..577]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001f",
      "range": "(578..583]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000020",
      "range": "(583..586]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000021",
      "range": "(586..594]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000022",
      "range": "(594..653]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M00000023",
      "range": "(625..638]",
      "type": "italic",
    },
    {
      "attributes": {},
      "id": "M00000024",
      "range": "(632..638]",
      "type": "bold",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000025",
      "range": "(654..662]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000026",
      "range": "(662..666]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000027",
      "range": "(666..671]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000028",
      "range": "(671..793]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000029",
      "range": "(794..799]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002a",
      "range": "(799..802]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002b",
      "range": "(802..809]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002c",
      "range": "(809..952]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M0000002d",
      "range": "(814..819]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002e",
      "range": "(953..961]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002f",
      "range": "(961..964]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000030",
      "range": "(964..970]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000031",
      "range": "(970..1112]",
      "type": "slice",
    },
  ],
  "text": "￼￼￼name￼age￼job￼notes￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people￼￼￼name￼age￼job￼notes￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
}
`;

exports[`tables converting 1`] = `
{
  "blocks": [
    {
      "attributes": {
        "columns": [
          {
            "columnName": "name__1",
            "name": "name",
            "slice": "M00000000",
            "textAlignment": "start",
          },
          {
            "columnName": "age__2",
            "name": "age",
            "slice": "M00000001",
            "textAlignment": "end",
          },
          {
            "columnName": "job__3",
            "name": "job",
            "slice": "M00000002",
          },
          {
            "columnName": "notes__4",
            "name": "notes",
            "slice": "M00000003",
            "textAlignment": "center",
          },
        ],
        "dataSet": "B00000001",
        "showColumnHeaders": true,
      },
      "id": "B00000000",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {
        "records": [
          {
            "age__2": {
              "jsonValue": "20",
              "slice": "M00000007",
            },
            "job__3": {
              "jsonValue": "fighter",
              "slice": "M00000008",
            },
            "name__1": {
              "jsonValue": "laios",
              "slice": "M00000006",
            },
            "notes__4": {
              "jsonValue": "ちょっと変な but earnest person. He really really likes monsters",
              "slice": "M00000009",
            },
          },
          {
            "age__2": {
              "jsonValue": "500",
              "slice": "M0000000d",
            },
            "job__3": {
              "jsonValue": "mage",
              "slice": "M0000000e",
            },
            "name__1": {
              "jsonValue": "marcille",
              "slice": "M0000000c",
            },
            "notes__4": {
              "jsonValue": "Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...",
              "slice": "M0000000f",
            },
          },
          {
            "age__2": {
              "jsonValue": "18",
              "slice": "M00000011",
            },
            "job__3": {
              "jsonValue": "healer",
              "slice": "M00000012",
            },
            "name__1": {
              "jsonValue": "falin",
              "slice": "M00000010",
            },
            "notes__4": {
              "jsonValue": "She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers",
              "slice": "M00000013",
            },
          },
          {
            "age__2": {
              "jsonValue": "29",
              "slice": "M00000016",
            },
            "job__3": {
              "jsonValue": "thief",
              "slice": "M00000017",
            },
            "name__1": {
              "jsonValue": "chilchuk",
              "slice": "M00000015",
            },
            "notes__4": {
              "jsonValue": "Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
              "slice": "M00000018",
            },
          },
        ],
        "schema": {
          "age__2": "rich_text",
          "job__3": "rich_text",
          "name__1": "rich_text",
          "notes__4": "rich_text",
        },
      },
      "id": "B00000001",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "data-set",
    },
    {
      "attributes": {},
      "id": "B00000002",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000003",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000004",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000005",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000006",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000007",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000008",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000009",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000c",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000d",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000e",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000f",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000010",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000011",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000012",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000013",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000014",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000015",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
  ],
  "marks": [
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000000",
      "range": "(2..7]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000001",
      "range": "(7..11]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000002",
      "range": "(11..15]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000003",
      "range": "(15..21]",
      "type": "slice",
    },
    {
      "attributes": {
        "url": "https://ja.wikipedia.org/wiki/%E3%83%80%E3%83%B3%E3%82%B8%E3%83%A7%E3%83%B3%E9%A3%AF",
      },
      "id": "M00000004",
      "range": "(16..21)",
      "type": "link",
    },
    {
      "attributes": {},
      "id": "M00000005",
      "range": "(16..21]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000006",
      "range": "(22..27]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000007",
      "range": "(27..30]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000008",
      "range": "(30..38]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000009",
      "range": "(38..97]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M0000000a",
      "range": "(69..82]",
      "type": "italic",
    },
    {
      "attributes": {},
      "id": "M0000000b",
      "range": "(76..82]",
      "type": "bold",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000c",
      "range": "(98..106]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000d",
      "range": "(106..110]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000e",
      "range": "(110..115]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000f",
      "range": "(115..237]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000010",
      "range": "(238..243]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000011",
      "range": "(243..246]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000012",
      "range": "(246..253]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000013",
      "range": "(253..396]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M00000014",
      "range": "(258..263]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000015",
      "range": "(397..405]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000016",
      "range": "(405..408]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000017",
      "range": "(408..414]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000018",
      "range": "(414..556]",
      "type": "slice",
    },
  ],
  "text": "￼￼￼name￼age￼job￼notes￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
}
`;

exports[`tables parsing 1`] = `
{
  "blocks": [
    {
      "attributes": {},
      "id": "B00000000",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {},
      "id": "B00000001",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "thead",
    },
    {
      "attributes": {},
      "id": "B00000002",
      "parents": [
        "table",
        "thead",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000003",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B00000004",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {},
      "id": "B00000005",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B00000006",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {},
      "id": "B00000007",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "tbody",
    },
    {
      "attributes": {},
      "id": "B00000008",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000009",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B0000000a",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B0000000b",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B0000000c",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B0000000d",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B0000000e",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B0000000f",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000010",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B00000011",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000012",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000013",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B00000014",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000015",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B00000016",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000017",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000018",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B00000019",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B0000001a",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B0000001b",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
  ],
  "marks": [
    {
      "attributes": {},
      "id": "M00000000",
      "range": "(17..22]",
      "type": "em",
    },
    {
      "attributes": {
        "href": "https://ja.wikipedia.org/wiki/%E3%83%80%E3%83%B3%E3%82%B8%E3%83%A7%E3%83%B3%E9%A3%AF",
      },
      "id": "M00000001",
      "range": "(17..22]",
      "type": "link",
    },
    {
      "attributes": {},
      "id": "M00000002",
      "range": "(72..85]",
      "type": "em",
    },
    {
      "attributes": {},
      "id": "M00000003",
      "range": "(79..85]",
      "type": "strong",
    },
    {
      "attributes": {},
      "id": "M00000004",
      "range": "(263..268]",
      "type": "em",
    },
  ],
  "text": "￼￼￼￼name￼age￼job￼notes￼￼￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
}
`;
